mise en style background pages restaurants

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 		</main>
 		<footer class="footer">
 			<div class="footercontent">
-				<h3 class="logo">Ohmyfood</h3>
+				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
 					<li class="footerlist">
-						<i class="fas fa-utensils">Proposer un restaurant</i>
+						<i class="fas fa-utensils"></i>Proposer un restaurant
 					</li>
 					<li class="footerlist">
-						<i class="fas fa-hands-helping">Devenir partenaire</i>
+						<i class="fas fa-hands-helping"></i>Devenir partenaire
 					</li>
 					<li class="footerlist">Mentions légales
 					</li>
