--- a/pages/lesapothicaires.html
+++ b/pages/lesapothicaires.html
@@ -27,62 +27,62 @@
                     <i class="far fa-heart"></i>
                 </header>
                 <div class="entrées">
-                    <h2 class="entréetitle">ENTRÉES</h2>
+                    <h2 class="foodtitle">ENTRÉES</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Tomates</h3>
                                 <p class="foodcarddescription">Hollandaise safran vin jaune</p>
-                                    <span class="foodcardprice">25€</span>
+                                    <p class="foodcardprice">25€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Thon rouge mariné au verju</h3>
                                 <p class="foodcarddescription">Gelée de boeuf et ponzu, riz noir</p>
-                                    <span class="foodcardprice">35€</span>
+                                    <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Langoustines au BBQ</h3>
                                 <p class="foodcarddescription">Guanciale, haricots, crème fermière</p>
-                                    <span class="foodcardprice">20€</span>
+                                    <p class="foodcardprice">20€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Pigeon, zaatar, trévise</h3>
-                                <p class="foodcarddescription">Sauce prune-myrtille, géranium odorant</p>
-                                    <span class="foodcardprice">35€</span>
+                                <p class="foodcarddescription">Sauce prune-myrtille</p>
+                                    <p class="foodcardprice">35€</p>
                         </div>
                 </div>
                 <div class="plats">
-                    <h2 class="platstitle">PLATS</h2>
+                    <h2 class="foodtitle">PLATS</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Tartare de veau</h3>
                                 <p class="foodcarddescription">Pata negra, asperges blanches</p>
-                                    <span class="foodcardprice">40€</span>
+                                    <p class="foodcardprice">40€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Omble Chevalier</h3>
-                                <p class="foodcarddescription">Jus de chou pointue et livèche, « ragoût » végétal</p>
-                                    <span class="foodcardprice">35€</span>
+                                <p class="foodcarddescription">Jus de chou</p>
+                                    <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Lavare fumé</h3>
                                 <p class="foodcarddescription">Et riz rouge de camargue</p>
-                                    <span class="foodcardprice">44€</span>
+                                    <p class="foodcardprice">44€</p>
                         </div>
                 </div>
                 <div class="dessert">
-                    <h2 class="desserttitle">DESSERTS</h2>
+                    <h2 class="foodtitle">DESSERTS</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Biscuit café, </h3>
                                 <p class="foodcarddescription">Sorbet gingembre</p>
-                                    <span class="foodcardprice">18€</span>
+                                    <p class="foodcardprice">18€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Fraises</h3>
-                                <p class="foodcarddescription">Crème cuite, sorbet fruits rouges, persil.</p>
-                                    <span class="foodcardprice">22€</span>
+                                <p class="foodcarddescription">Crème cuite</p>
+                                    <p class="foodcardprice">22€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Tarte au chocolat</h3>
                                 <p class="foodcarddescription">Sur un lit d'avocat</p>
-                                    <span class="foodcardprice">23€</span>
+                                    <p class="foodcardprice">23€</p>
                         </div>
                 </div>
                 <div class="commander">
@@ -92,13 +92,13 @@
         </main>
         <footer class="footer">
 			<div class="footercontent">
-				<h3 class="logo">Ohmyfood</h3>
+				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
 					<li class="footerlist">
-						<i class="fas fa-utensils">Proposer un restaurant</i>
+						<i class="fas fa-utensils"></i>Proposer un restaurant
 					</li>
 					<li class="footerlist">
-						<i class="fas fa-hands-helping">Devenir partenaire</i>
+						<i class="fas fa-hands-helping"></i>Devenir partenaire
 					</li>
 					<li class="footerlist">Mentions légales
 					</li>
