--- a/pages/tetedoie.html
+++ b/pages/tetedoie.html
@@ -27,57 +27,57 @@
                     <i class="far fa-heart"></i>
                 </header>
                 <div class="entrées">
-                    <h2 class="entréetitle">ENTRÉES</h2>
+                    <h2 class="foodtitle">ENTRÉES</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Tartare de thon</h3>
                                 <p class="foodcarddescription">Assaisonné au yuzu</p>
-                                    <span class="foodcardprice">25€</span>
+                                    <p class="foodcardprice">25€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Homard bleu</h3>
                                 <p class="foodcarddescription">Et algues diverses</p>
-                                    <span class="foodcardprice">35€</span>
+                                    <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Velouté de cèpes </h3>
                                 <p class="foodcarddescription">Aux truffes</p>
-                                    <span class="foodcardprice">20€</span>
+                                    <p class="foodcardprice">20€</p>
                         </div>
                 </div>
                 <div class="plats">
-                    <h2 class="platstitle">PLATS</h2>
+                    <h2 class="foodtitle">PLATS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Poulet-lapin cousues et rôties aux herbes de Provence</h3>
+                            <h3 class="foodcardtitle">Lapin cuit au foin</h3>
                                 <p class="foodcarddescription">Sauce teriyaki</p>
-                                    <span class="foodcardprice">40€</span>
+                                    <p class="foodcardprice">40€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Langouste rôtie </h3>
                                 <p class="foodcarddescription">Et ses légumes de saison</p>
-                                    <span class="foodcardprice">35€</span>
+                                    <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Côte de boeuf Angus </h3>
                                 <p class="foodcarddescription">Et sa purée de panais</p>
-                                    <span class="foodcardprice">44€</span>
+                                    <p class="foodcardprice">44€</p>
                         </div>
                 </div>
                 <div class="dessert">
-                    <h2 class="desserttitle">DESSERTS</h2>
+                    <h2 class="foodtitle">DESSERTS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Café gourmand/h3>
+                            <h3 class="foodcardtitle">Café gourmand</h3>
                                 <p class="foodcarddescription">Du chef</p>
-                                    <span class="foodcardprice">18€</span>
+                                    <p class="foodcardprice">18€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Crème brulée </h3>
-                                <p class="foodcarddescription">à la lavande</p>
-                                    <span class="foodcardprice">22€</span>
+                                <p class="foodcarddescription">À la lavande</p>
+                                    <p class="foodcardprice">22€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Tiramisu</h3>
-                                <p class="foodcarddescription">speculoos-nutella</p>
-                                    <span class="foodcardprice">23€</span>
+                                <p class="foodcarddescription">Speculoos-nutella</p>
+                                    <p class="foodcardprice">23€</p>
                         </div>
                 </div>
                 <div class="commander">
@@ -87,13 +87,13 @@
         </main>
         <footer class="footer">
 			<div class="footercontent">
-				<h3 class="logo">Ohmyfood</h3>
+				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
 					<li class="footerlist">
-						<i class="fas fa-utensils">Proposer un restaurant</i>
+						<i class="fas fa-utensils"></i>Proposer un restaurant
 					</li>
 					<li class="footerlist">
-						<i class="fas fa-hands-helping">Devenir partenaire</i>
+						<i class="fas fa-hands-helping"></i>Devenir partenaire
 					</li>
 					<li class="footerlist">Mentions légales
 					</li>
