--- a/pages/bistrotdupotager.html
+++ b/pages/bistrotdupotager.html
@@ -27,57 +27,57 @@
                     <i class="far fa-heart"></i>
                 </header>
                 <div class="entrées">
-                    <h2 class="entréetitle">ENTRÉES</h2>
+                    <h2 class="foodtitle">ENTRÉES</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Soupe de fêves basques</h3>
                                 <p class="foodcarddescription">Au piment d'Espelette</p>
-                                    <span class="foodcardprice">25€</span>
+                                    <p class="foodcardprice">25€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Foie gras de canard mi-cuit</h3>
                                 <p class="foodcarddescription">À la truffe blanche</p>
-                                    <span class="foodcardprice">35€</span>
+                                    <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Oeuf poché</h3>
                                 <p class="foodcarddescription">Et sa panelure d'osso-iraty</p>
-                                    <span class="foodcardprice">20€</span>
+                                    <p class="foodcardprice">20€</p>
                         </div>
                 </div>
                 <div class="plats">
-                    <h2 class="platstitle">PLATS</h2>
+                    <h2 class="foodtitle">PLATS</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Côte de boeuf à l'ail des ours</h3>
                                 <p class="foodcarddescription">Accompagnée de frites de patate douce</p>
-                                    <span class="foodcardprice">40€</span>
+                                    <p class="foodcardprice">40€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Agneau en croute</h3>
                                 <p class="foodcarddescription">Aux vieux légumes</p>
-                                    <span class="foodcardprice">35€</span>
+                                    <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Filet de bonito</h3>
                                 <p class="foodcarddescription">À l'orange sanguine</p>
-                                    <span class="foodcardprice">44€</span>
+                                    <p class="foodcardprice">44€</p>
                         </div>
                 </div>
                 <div class="dessert">
-                    <h2 class="desserttitle">DESSERTS</h2>
+                    <h2 class="foodtitle">DESSERTS</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Gâteau basque</h3>
                                 <p class="foodcarddescription">Revisité</p>
-                                    <span class="foodcardprice">18€</span>
+                                    <p class="foodcardprice">18€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Macaron au chocolat d'exception</h3>
                                 <p class="foodcarddescription">Et glace à la vanille de Patxaran</p>
-                                    <span class="foodcardprice">22€</span>
+                                    <p class="foodcardprice">22€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Mousse au chocolat</h3>
                                 <p class="foodcarddescription">Au piment d'Espelette</p>
-                                    <span class="foodcardprice">23€</span>
+                                    <p class="foodcardprice">23€</p>
                         </div>
                 </div>
                 <div class="commander">
@@ -87,13 +87,13 @@
         </main>
         <footer class="footer">
 			<div class="footercontent">
-				<h3 class="logo">Ohmyfood</h3>
+				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
 					<li class="footerlist">
-						<i class="fas fa-utensils">Proposer un restaurant</i>
+						<i class="fas fa-utensils"></i>Proposer un restaurant
 					</li>
 					<li class="footerlist">
-						<i class="fas fa-hands-helping">Devenir partenaire</i>
+						<i class="fas fa-hands-helping"></i>Devenir partenaire
 					</li>
 					<li class="footerlist">Mentions légales
 					</li>
