--- a/pages/cozna.html
+++ b/pages/cozna.html
@@ -27,57 +27,57 @@
                     <i class="far fa-heart"></i>
                 </header>
                 <div class="entrées">
-                    <h2 class="entréetitle">ENTRÉES</h2>
+                    <h2 class="foodtitle">ENTRÉES</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Soupe de la mer</h3>
                                 <p class="foodcarddescription">et sa crème de couteau</p>
-                                    <span class="foodcardprice">25€</span>
+                                    <p class="foodcardprice">25€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Jardinière de légumes d'antan</h3>
                                 <p class="foodcarddescription">Butternut et panais</p>
-                                    <span class="foodcardprice">35€</span>
+                                    <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Tartare de veau</h3>
                                 <p class="foodcarddescription">et sa croziflette</p>
-                                    <span class="foodcardprice">20€</span>
+                                    <p class="foodcardprice">20€</p>
                         </div>
                 </div>
                 <div class="plats">
-                    <h2 class="platstitle">PLATS</h2>
+                    <h2 class="foodtitle">PLATS</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Coquilles Saint-Jacques</h3>
                                 <p class="foodcarddescription">Accompagnées d'une purée de panais</p>
-                                    <span class="foodcardprice">40€</span>
+                                    <p class="foodcardprice">40€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Magret de canard</h3>
                                 <p class="foodcarddescription">Et gratin dauphinois</p>
-                                    <span class="foodcardprice">35€</span>
+                                    <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Pigeonneau d’Ille-et-Vilaine</h3>
                                 <p class="foodcarddescription">Sur son lit de gnocchis aux légumes</p>
-                                    <span class="foodcardprice">44€</span>
+                                    <p class="foodcardprice">44€</p>
                         </div>
                 </div>
                 <div class="dessert">
-                    <h2 class="desserttitle">DESSERTS</h2>
+                    <h2 class="foodtitle">DESSERTS</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Sorbet de chartreuse</h3>
                                 <p class="foodcarddescription">Et mousse de noisettes</p>
-                                    <span class="foodcardprice">18€</span>
+                                    <p class="foodcardprice">18€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Fondant au chocolat</h3>
                                 <p class="foodcarddescription">à la vanille de la réunion</p>
-                                    <span class="foodcardprice">22€</span>
+                                    <p class="foodcardprice">22€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Millefeuille alpin</h3>
                                 <p class="foodcarddescription">Myrtilles et mûres</p>
-                                    <span class="foodcardprice">23€</span>
+                                    <p class="foodcardprice">23€</p>
                         </div>
                 </div>
                 <div class="commander">
@@ -87,13 +87,13 @@
         </main>
         <footer class="footer">
 			<div class="footercontent">
-				<h3 class="logo">Ohmyfood</h3>
+				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
 					<li class="footerlist">
-						<i class="fas fa-utensils">Proposer un restaurant</i>
+						<i class="fas fa-utensils"></i>Proposer un restaurant
 					</li>
 					<li class="footerlist">
-						<i class="fas fa-hands-helping">Devenir partenaire</i>
+						<i class="fas fa-hands-helping"></i>Devenir partenaire
 					</li>
 					<li class="footerlist">Mentions légales
 					</li>
