premiere regles responsive et poursuite mise en forme css

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 		<!-- Section restaurants-->
 			<section class="restaurants">
 				<h2 class="restaurantstitle">Restaurants</h2>
-				<div class="restaurantcartes">
+				<div class="cartecontainer">
+					<div class="restaurantcartes">
 					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/lesapothicaires.html">
 						<header class="carteheader">
 							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/lesapothicaires.jpeg" alt class="carteimage"/>
@@ -63,8 +64,8 @@
 							</div>
 						</footer>
 					</a>
-				</div>
-				<div class="restaurantcartes">
+					</div>
+					<div class="restaurantcartes">
 					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/bistrotdupotager.html">
 						<header class="carteheader">
 							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/bistrootdupotager.jpeg" alt class="carteimage"/>
@@ -78,8 +79,8 @@
 							</div>
 						</footer>
 					</a>
-				</div>
-				<div class="restaurantcartes">
+					</div>
+					<div class="restaurantcartes">
 					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/cozna.html">
 						<header class="carteheader">
 							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/cozna.jpeg" alt class="carteimage"/>
@@ -93,8 +94,8 @@
 							</div>	
 						</footer>
 					</a>
-				</div>
-				<div class="restaurantcartes">
+					</div>
+					<div class="restaurantcartes">
 					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/tetedoie.html">
 						<header class="carteheader">
 							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/tetedoie.jpeg" alt class="carteimage"/>
@@ -108,6 +109,7 @@
 							</div>
 						</footer>
 					</a>
+					</div>
 				</div>
 			</section>
 		</main>
