--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</section>
 		<!-- Section explore-->
 			<section class="explore">
-				<h2 class="exploretitle">Réservez le menu qui vous convient</h2>
+				<h2 class="exploretitle">Réservez le menu qui<br> vous convient</h2>
 					<p class="exploretext">Découvrez des restaurants d'exception séléctionnés par nos soins.</p>
 					<button class="explorebutton">Explorer nos restaurants</button>
 			</section>
@@ -50,7 +50,7 @@
 			<section class="restaurants">
 				<h2 class="restaurantstitle">Restaurants</h2>
 				<div class="cartecontainer">
-					<div class="restaurantcartes">
+					<div class="restaurantcartes carte1">
 					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/lesapothicaires.html">
 						<header class="carteheader">
 							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/lesapothicaires.jpeg" alt class="carteimage"/>
@@ -65,7 +65,7 @@
 						</footer>
 					</a>
 					</div>
-					<div class="restaurantcartes">
+					<div class="restaurantcartes carte2">
 					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/bistrotdupotager.html">
 						<header class="carteheader">
 							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/bistrootdupotager.jpeg" alt class="carteimage"/>
@@ -80,7 +80,7 @@
 						</footer>
 					</a>
 					</div>
-					<div class="restaurantcartes">
+					<div class="restaurantcartes carte3">
 					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/cozna.html">
 						<header class="carteheader">
 							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/cozna.jpeg" alt class="carteimage"/>
@@ -95,7 +95,7 @@
 						</footer>
 					</a>
 					</div>
-					<div class="restaurantcartes">
+					<div class="restaurantcartes carte4">
 					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/tetedoie.html">
 						<header class="carteheader">
 							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/tetedoie.jpeg" alt class="carteimage"/>
@@ -118,10 +118,10 @@
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
 					<li class="footerlist">
-						<i class="fas fa-utensils"></i>Proposer un restaurant
+						<i class="fas fa-utensils list1"></i>Proposer un restaurant
 					</li>
-					<li class="footerlist">
-						<i class="fas fa-hands-helping"></i>Devenir partenaire
+					<li class="footerlist ">
+						<i class="fas fa-hands-helping list2"></i>Devenir partenaire
 					</li>
 					<li class="footerlist">Mentions légales
 					</li>
