--- a/pages/bistrotdupotager.html
+++ b/pages/bistrotdupotager.html
@@ -24,9 +24,10 @@
             <section class="menu">
                 <header class="menuheader">
                     <div class="menutitle">Le Bistrot du potager</div>
-                    <i class="far fa-heart"></i>
+                    <div class="menuicone"><i class="far fa-heart"></i></div>
                 </header>
-                <div class="entrées">
+                <div class="menucontainer">
+                    <div class="entrées">
                     <h2 class="foodtitle">ENTRÉES</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Soupe de fêves basques</h3>
@@ -44,25 +45,25 @@
                                     <p class="foodcardprice">20€</p>
                         </div>
                 </div>
-                <div class="plats">
+                    <div class="plats">
                     <h2 class="foodtitle">PLATS</h2>
-                        <div class="foodcard">
-                            <h3 class="foodcardtitle">Côte de boeuf à l'ail des ours</h3>
-                                <p class="foodcarddescription">Accompagnée de frites de patate douce</p>
-                                    <p class="foodcardprice">40€</p>
-                        </div>
-                        <div class="foodcard">
-                            <h3 class="foodcardtitle">Agneau en croute</h3>
-                                <p class="foodcarddescription">Aux vieux légumes</p>
-                                    <p class="foodcardprice">35€</p>
-                        </div>
-                        <div class="foodcard">
-                            <h3 class="foodcardtitle">Filet de bonito</h3>
-                                <p class="foodcarddescription">À l'orange sanguine</p>
-                                    <p class="foodcardprice">44€</p>
-                        </div>
-                </div>
-                <div class="dessert">
+                    <div class="foodcard">
+                        <h3 class="foodcardtitle">Côte de boeuf à l'ail des ours</h3>
+                            <p class="foodcarddescription">Accompagnée de frites de patate douce</p>
+                            <p class="foodcardprice">40€</p>
+                    </div>
+                    <div class="foodcard">
+                        <h3 class="foodcardtitle">Agneau en croute</h3>
+                            <p class="foodcarddescription">Aux vieux légumes</p>
+                            <p class="foodcardprice">35€</p>
+                    </div>
+                    <div class="foodcard">
+                        <h3 class="foodcardtitle">Filet de bonito</h3>
+                            <p class="foodcarddescription">À l'orange sanguine</p>
+                            <p class="foodcardprice">44€</p>
+                    </div>
+                    </div>
+                    <div class="dessert">
                     <h2 class="foodtitle">DESSERTS</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Gâteau basque</h3>
@@ -79,6 +80,7 @@
                                 <p class="foodcarddescription">Au piment d'Espelette</p>
                                     <p class="foodcardprice">23€</p>
                         </div>
+                    </div>
                 </div>
                 <div class="commander">
                     <button class="commanderbtn">Commander</button>
