--- a/pages/lesapothicaires.html
+++ b/pages/lesapothicaires.html
@@ -24,19 +24,15 @@
             <section class="menu">
                 <header class="menuheader">
                     <div class="menutitle">Les apothicaires</div>
-                    <i class="far fa-heart"></i>
+                    <div class="menuicone"><i class="far fa-heart"></i></div>
                 </header>
+                <div class="menucontainer">
                 <div class="entrées">
                     <h2 class="foodtitle">ENTRÉES</h2>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Tomates</h3>
                                 <p class="foodcarddescription">Hollandaise safran vin jaune</p>
                                     <p class="foodcardprice">25€</p>
-                        </div>
-                        <div class="foodcard">
-                            <h3 class="foodcardtitle">Thon rouge mariné au verju</h3>
-                                <p class="foodcarddescription">Gelée de boeuf et ponzu, riz noir</p>
-                                    <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
                             <h3 class="foodcardtitle">Langoustines au BBQ</h3>
@@ -84,6 +80,7 @@
                                 <p class="foodcarddescription">Sur un lit d'avocat</p>
                                     <p class="foodcardprice">23€</p>
                         </div>
+                </div>
                 </div>
                 <div class="commander">
                     <button class="commanderbtn">Commander</button>
