--- a/pages/tetedoie.html
+++ b/pages/tetedoie.html
@@ -24,8 +24,9 @@
             <section class="menu">
                 <header class="menuheader">
                     <div class="menutitle">Tête d'oie</div>
-                    <i class="far fa-heart"></i>
+                    <div class="menuicone"><i class="far fa-heart"></i></div>
                 </header>
+                <div class="menucontainer">
                 <div class="entrées">
                     <h2 class="foodtitle">ENTRÉES</h2>
                         <div class="foodcard">
@@ -79,6 +80,7 @@
                                 <p class="foodcarddescription">Speculoos-nutella</p>
                                     <p class="foodcardprice">23€</p>
                         </div>
+                </div>
                 </div>
                 <div class="commander">
                     <button class="commanderbtn">Commander</button>
