--- a/pages/lesapothicaires.html
+++ b/pages/lesapothicaires.html
@@ -92,10 +92,10 @@
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
 					<li class="footerlist">
-						<i class="fas fa-utensils"></i>Proposer un restaurant
+						<i class="fas fa-utensils list1"></i>Proposer un restaurant
 					</li>
 					<li class="footerlist">
-						<i class="fas fa-hands-helping"></i>Devenir partenaire
+						<i class="fas fa-hands-helping list2"></i>Devenir partenaire
 					</li>
 					<li class="footerlist">Mentions légales
 					</li>
