--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<h1 class="logo">ohmyfood</h1>
+			<h1 class="logo logoindex">ohmyfood</h1>
 		</header>
 		<main>
 		<!-- Section localisation-->
