rajout des liens footer, et icone retour au menu, mise en style diverses

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<h3 class="restauranttitle">Les apothicaires</h3>
 							<div class="restaurantquartier">Foch</div>
 							<div class="favorite">
-								<i class="far fa-heart"></i>
+								<i class="far fa-heart iconheart"></i>
 							</div>
 						</footer>
 					</a>
@@ -75,7 +75,7 @@
 							<h3 class="restauranttitle">Le bistrot du potager</h3>
 							<div class="restaurantquartier">Gerland</div>
 							<div class="favorite">
-									<i class="far fa-heart"></i>
+									<i class="far fa-heart iconheart"></i>
 							</div>
 						</footer>
 					</a>
@@ -90,7 +90,7 @@
 							<h3 class="restauranttitle">Cozna</h3>
 							<div class="restaurantquartier">Sainte Claire</div>
 							<div class="favorite">	
-								<i class="far fa-heart"></i>
+								<i class="far fa-heart iconheart"></i>
 							</div>	
 						</footer>
 					</a>
@@ -105,7 +105,7 @@
 							<h3 class="restauranttitle">Tête d'oie</h3>
 							<div class="restaurantquartier">Saint George</div>
 							<div class="favorite">
-								<i class="far fa-heart"></i>
+								<i class="far fa-heart iconheart"></i>
 							</div>
 						</footer>
 					</a>
