--- a/pages/tetedoie.html
+++ b/pages/tetedoie.html
@@ -14,7 +14,7 @@
 	</head>
     <body>
 		<header class="header">
-            <i class="fas fa-arrow-left"></i>
+            <a href="/Users/chips/Desktop/AntoineChirat_3_15062021/index.html"><i class="fas fa-arrow-left iconback"></i></a>
 			<h1 class="logo">ohmyfood</h1>
 		</header>
 		<main>
@@ -91,16 +91,20 @@
 			<div class="footercontent">
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
-					<li class="footerlist">
+					<a href="#"><li class="footerlist">
 						<i class="fas fa-utensils list1"></i>Proposer un restaurant
 					</li>
-					<li class="footerlist">
+                    </a>
+					<a href="#"><li class="footerlist">
 						<i class="fas fa-hands-helping list2"></i>Devenir partenaire
 					</li>
-					<li class="footerlist">Mentions légales
+                    </a>
+					<a href="#"><li class="footerlist">Mentions légales
 					</li>
-					<li class="footerlist">Contact
+                    </a>
+					<a href="#"><li class="footerlist">Contact
 					</li>
+                    </a>
 				</ul>
 			</div>
 		</footer>
