--- a/pages/cozna.html
+++ b/pages/cozna.html
@@ -14,12 +14,12 @@
 	</head>
     <body>
 		<header class="header">
-            <a href="/Users/chips/Desktop/AntoineChirat_3_15062021/index.html"><i class="fas fa-arrow-left iconback"></i></a>
+            <a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
 			<h1 class="logo">ohmyfood</h1>
 		</header>
 		<main>
             <div class="background">
-                <img class="backgroundpicture" src="/layout/composants/images/cozna.jpeg">
+                <img class="backgroundpicture" src="layout/composants/images/cozna.jpeg">
             </div>
             <section class="menu">
                 <header class="menuheader">
