--- a/pages/bistrotdupotager.html
+++ b/pages/bistrotdupotager.html
@@ -14,7 +14,7 @@
 	</head>
     <body>
 		<header class="header">
-            <a href="/Users/chips/Desktop/AntoineChirat_3_15062021/index.html"><i class="fas fa-arrow-left iconback"></i></a>
+            <a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
 			<h1 class="logo">ohmyfood</h1>
 		</header>
 		<main>
