test insertion feuille de style page restaurants

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</a>
 					</div>
 					<div class="restaurantcartes carte2">
-					<a class="carte" href="/pages/bistrotdupotager.html">
+					<a class="carte" href="pages/bistrotdupotager.html">
 						<header class="carteheader">
 							<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
@@ -81,7 +81,7 @@
 					</a>
 					</div>
 					<div class="restaurantcartes carte3">
-					<a class="carte" href="AntoineChirat_3_15062021/pages/cozna.html">
+					<a class="carte" href="pages/cozna.html">
 						<header class="carteheader">
 							<img src="layout/composants/images/cozna.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
