suite test pages

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<h2 class="restaurantstitle">Restaurants</h2>
 				<div class="cartecontainer">
 					<div class="restaurantcartes carte1">
-					<a class="carte" href="pages/lesapothicaires.html">
+					<a class="carte" href="lesapothicaires.html">
 						<header class="carteheader">
 							<img src="layout/composants/images/lesapothicaires.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
@@ -81,7 +81,7 @@
 					</a>
 					</div>
 					<div class="restaurantcartes carte3">
-					<a class="carte" href="/cozna.html">
+					<a class="carte" href="cozna.html">
 						<header class="carteheader">
 							<img src="layout/composants/images/cozna.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
@@ -96,7 +96,7 @@
 					</a>
 					</div>
 					<div class="restaurantcartes carte4">
-					<a class="carte" href="/tetedoie.html">
+					<a class="carte" href="tetedoie.html">
 						<header class="carteheader">
 							<img src="layout/composants/images/tetedoie.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
